# projects

./: Combinations.java  CombinationsRevised.java  Main.cpp  Main.h  Packet.java  Playground.cpp  Playground.h
Break/: Permutations.java  RecursiveDrawer.java  SortingAlgorithm.java
Learning/: CMakeLists.txt  Main.cpp  Playground.cpp  Playground.h
Learning/TicketSystem/: CMakeLists.txt  Ticket.cpp  Ticket.h  TicketSystem.cpp  TicketSystem.h  main.cpp
MusicPlayer/: Audio.java  FindingMode.java  MusicPlayer.ctxt  MusicPlayer.java  Song.java
TicketSystem/: Password.java  PasswordManager.java  Ticket.java  TicketSystem.java
Week 10 - COMP103/: Base.java  EliteTeam.java  OptimalRoute.java  Squad.java
Week 12 - COMP103/: BaggageDrop.java  Passenger.java  Search.java  readme.txt
Week 13  - COMP103 Exam Content/: readme.txt
Week 14 - COMP103 Exam Content/: BaggageDrop.java  BoardingSimulation.java  Flight.java  FlightProcessor.java  Node.java  Passenger.java  ThreatDetector.java  anomalyDetection  readme.txt
Week 3 - COMP103/: BankBalance.ctxt  BankBalance.java  Password.java  PasswordManager.ctxt  PasswordManager.java  Pencil.ctxt  Pencil.java  Rays.ctxt  Rays.java  Shoe.ctxt  Shoe.java  ShoesStore.ctxt  ShoesStore.java  Stroke.ctxt  Stroke.java  labs.ctxt  labs.java  package.bluej  shoe_list.txt
Week 4 - COMP103/: BankBalance.ctxt  BankBalance.java  Password.ctxt  PasswordManager.ctxt  PasswordManager.java  Point.java  Restaurant.ctxt  Restaurant.java  RestaurantOrders.ctxt  RestaurantOrders.java  labs.ctxt  labs.java  package.bluej
(+33 files in other folders)
